adding some pages

--- a/app/_includes/_blocks/_references/trouwambtenaar.html
+++ b/app/_includes/_blocks/_references/trouwambtenaar.html
@@ -6,6 +6,6 @@
 		<a href="/trouwambtenaar" class="button">Lees meer</a>
 	</div>
 	<picture data-focus-x="0.331" data-focus-y="-0.224" class="focuspoint reference-image">
-		<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+		<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-hero.jpg" alt="Jelle Kuiper">
 	</picture>
 </article>
