--- a/app/_includes/_blocks/contactform.html
+++ b/app/_includes/_blocks/contactform.html
@@ -20,7 +20,7 @@
 	</form>
 	
 	<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="{{ page.formimage }}" alt="Jelle Kuiper">
 	</picture>
 	
 	<div class="thankyou">
