--- a/app/_includes/_blocks/counter.html
+++ b/app/_includes/_blocks/counter.html
@@ -1,10 +1,10 @@
 <section class="block counter">
 	<div class="wedding-counter">
-		<span class="counter">627</span>
-		<span class="text">Huwelijken gesloten</span>
+		<span class="counter">{{ page.firstTimer }}</span>
+		<span class="text">{{ page.firstTitle }}</span>
 	</div>
 	<div class="experience-counter">
-		<span class="counter">10</span>
-		<span class="text">Jaar ervaring</span>
+		<span class="counter">{{ page.secondTimer }}</span>
+		<span class="text">{{ page.secondTitle }}</span>
 	</div>
 </section>
