--- a/app/_includes/_blocks/hero.html
+++ b/app/_includes/_blocks/hero.html
@@ -1,7 +1,7 @@
 <div class="block hero">
 		<div class="image-wrapper">
 			<picture class="hero-image">
-				<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+				<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
 			</picture>
 		</div>
 	<div class="introduction">
