--- a/app/_includes/_sections/head.html
+++ b/app/_includes/_sections/head.html
@@ -22,9 +22,9 @@
 	<link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
 	<meta property="og:title" content="{{ site.author.name }}">
 	<meta property="og:description" content="{{ site.description }}">
-	<meta property="og:image" content="{{ site.url }}/img/og-image.png">
-	<meta property="og:image:width" content="850" />
-	<meta property="og:image:height" content="567" />
+	<meta property="og:image" content="{{ page.headerimage }}">
+	<!-- <meta property="og:image:width" content="850" /> -->
+	<!-- <meta property="og:image:height" content="567" /> -->
 	<meta property="og:url" content="{{ site.url }}">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="{{ site.author.name }}">
