--- a/app/_includes/_blocks/_references/bedrijfsoptredens.html
+++ b/app/_includes/_blocks/_references/bedrijfsoptredens.html
@@ -5,7 +5,7 @@
 		<p class="description">Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.</p>
 		<a href="/bedrijfsoptredens" class="button">Lees meer</a>
 	</div>
-	<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint reference-image">
+	<picture class="focuspoint reference-image">
 		<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptredens-Jelle-Kuiper-hero.jpg" alt="Jelle Kuiper">
 	</picture>
 </article>
