--- a/app/_includes/_blocks/_references/trouwambtenaar.html
+++ b/app/_includes/_blocks/_references/trouwambtenaar.html
@@ -5,7 +5,7 @@
 		<p class="description">Omdat standaard huwelijksceremonies best wat leuker en wat minder stijf kunnen heeft Jelle in 2005 besloten zijn cabarettalent hierop in te zetten. Sindsdien is hij buitengewoon ambtenaar van de burgerlijke stand. Hij zorgt dat jouw belangrijkste dag van je leven een unieke ervaring wordt, voor jullie én voor jullie gasten. De toon van jullie dag wordt gezet met een ontspannen en intieme ceremonie vol humor en interactie.</p>
 		<a href="/trouwambtenaar" class="button">Lees meer</a>
 	</div>
-	<picture data-focus-x="0.331" data-focus-y="-0.224" class="focuspoint reference-image">
+	<picture class="focuspoint reference-image">
 		<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-hero.jpg" alt="Jelle Kuiper">
 	</picture>
 </article>
