--- a/app/_includes/_blocks/contactform.html
+++ b/app/_includes/_blocks/contactform.html
@@ -19,7 +19,7 @@
 	    <input class="send button" type="submit" value="Verstuur bericht" >
 	</form>
 	
-	<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+	<picture class="focuspoint picture">
 			<img class="img" src="{{ page.formimage }}" alt="Jelle Kuiper">
 	</picture>
 	
