--- a/app/_includes/_blocks/hero.html
+++ b/app/_includes/_blocks/hero.html
@@ -1,6 +1,6 @@
 <div class="block hero">
 		<div class="image-wrapper">
-			<picture class="hero-image">
+			<picture class="hero-image focuspoint">
 				<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
 			</picture>
 		</div>
