--- a/app/_includes/_sections/head.html
+++ b/app/_includes/_sections/head.html
@@ -11,15 +11,16 @@
 	<meta name="last-modified" content="Sun, 3 Sep 2017 14:00:46 GMT " />
 	<meta name="cache-control" content="Private" />
 	<meta name="Expires" content="600" />
-	<meta name="msapplication-config" content="/assets/img/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
 	<link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
-	<link rel="manifest" href="/assets/img/favicons/manifest.json">
+	<link rel="manifest" href="/assets/img/favicons/site.webmanifest">
 	<link rel="mask-icon" href="/assets/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
 	<link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
+	<meta name="msapplication-TileColor" content="#2d89ef">
+	<meta name="msapplication-config" content="/assets/img/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
 	<meta property="og:title" content="{{ site.author.name }}">
 	<meta property="og:description" content="{{ site.description }}">
 	<meta property="og:image" content="{{ page.headerimage }}">
