--- a/app/_layouts/detailpage.html
+++ b/app/_layouts/detailpage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	{% include _sections/head.html %}
-	<body class="body page detail">
+	<body class="body page detailpage">
 		{% include _blocks/header.html %}
-		<a href="/theaterproducties">{% include _svg/arrow-left.svg %} terug</a>
-		<h1 class="title">{{ page.title }}</h1>
+		<div class="heading">
+			<a href="/theaterproducties" class="back">{% include _svg/arrow-left.svg %} terug</a>
+			<h1 class="title">{{ page.title }}</h1>
+		</div>
 		<main>	
 			<picture class="hero-image">
 				<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
