--- a/app/_sass/elements/blocks/_block.hero.scss
+++ b/app/_sass/elements/blocks/_block.hero.scss
@@ -45,10 +45,10 @@
 		height: calc(100vh - #{$offset});
 		
 		.hero-image {
-			position: relative;
-			width: 100%;
+			position: static;
+			width: auto;
 			height: calc(100vh - #{$offset});
-			display: block;
+			width: 100vw;
 
 			&:after {
 				content: '';
@@ -59,14 +59,6 @@
 				left: 0;
 				z-index: 3;
 				background-color: rgba(black, .5);
-			}
-
-			.img {
-				position: absolute;
-			  	object-fit: cover;
-				width: auto;
-				height: 100%;
-				display: block;
 			}
 		}
 	}
@@ -93,15 +85,10 @@
 		}
 
 		.image-wrapper {
+			height: calc(80vh - #{$offset});
 
 			.hero-image {
-
-				.img {
-					position: absolute;
-					width: 100%;
-					display: block;
-					transform: translateY(0);
-				}
+				height: calc(80vh - #{$offset});
 			}
 		}
 	}
