--- a/app/_sass/elements/blocks/_block.references.scss
+++ b/app/_sass/elements/blocks/_block.references.scss
@@ -9,6 +9,19 @@
 		text-align: center;
 		min-height: $gutter * 10;
 		color: $white;
+		position: relative;
+
+		&:after {
+			content: '';
+			background-color: black;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			opacity: .15;
+		}
+
 		&:last-child {
 			margin-bottom: 0;
 		}
@@ -47,8 +60,20 @@
 		}
 
 		.reference-image {
-			.img {
+			
+			&:not(.focuspoint) {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 320px;
+				
+				.img {
+					height: 100%;
+					object-fit: cover;
+				}
 			}
+
 		}
 
 	}
