--- a/app/assets/css/stylesheet.css
+++ b/app/assets/css/stylesheet.css
@@ -704,6 +704,59 @@
     -o-transform: scale(1);
     transform: scale(1); } }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px);
+    opacity: 0; }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1; } }
+
+@-o-keyframes fadeIn {
+  0% {
+    -o-transform: translateY(40px);
+    transform: translateY(40px);
+    opacity: 0; }
+  100% {
+    -o-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  0% {
+    -webkit-transform: translateY(40px);
+    -o-transform: translateY(40px);
+    transform: translateY(40px);
+    opacity: 0; }
+  100% {
+    -webkit-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1; } }
+
+main .block .usp .picture,
+main .block .reference {
+  opacity: 0; }
+
+.fade-in {
+  -webkit-animation-name: fadeIn;
+  -o-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-iteration-count: 1;
+  -o-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -o-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 0.9s;
+  -o-animation-duration: 0.9s;
+  animation-duration: 0.9s; }
+
 /* Sizes */
 /* Grids */
 /* Gutters */
@@ -843,6 +896,95 @@ table {
 button::-moz-focus-inner {
   border: 0; }
 
+.detailpage {
+  position: relative; }
+  .detailpage .header {
+    position: relative;
+    height: 40px; }
+    .detailpage .header .logo {
+      color: #242424;
+      display: none; }
+    .detailpage .header .main-menu .menu-toggle {
+      border-color: black; }
+      .detailpage .header .main-menu .menu-toggle:after {
+        background-color: black; }
+  .detailpage .hero-image {
+    display: block;
+    width: -webkit-calc(var(--max-width) / 24 * 22);
+    width: calc(var(--max-width) / 24 * 22);
+    max-width: -webkit-calc( var(--max-width) - (var(--max-width) / 37 * 2));
+    max-width: calc( var(--max-width) - (var(--max-width) / 37 * 2));
+    margin: 37.5px auto;
+    z-index: -99;
+    position: relative;
+    max-height: 500px;
+    overflow: hidden; }
+  .detailpage .heading {
+    position: relative; }
+    .detailpage .heading .back {
+      color: #333333;
+      top: 0;
+      margin-left: 4.16667vw;
+      position: absolute;
+      margin-top: -75px; }
+      .detailpage .heading .back svg {
+        color: #333333;
+        width: 10px; }
+    .detailpage .heading .title {
+      color: black;
+      text-align: center;
+      font-size: 3rem !important;
+      margin: 50px 0;
+      font-family: "OpenSans", sans-serif;
+      font-size: 1rem;
+      line-height: 1.5;
+      font-weight: 400;
+      font-family: "Oswald";
+      font-size: 2em;
+      letter-spacing: 0.3;
+      text-transform: uppercase;
+      font-weight: 500;
+      display: block; }
+  .detailpage main .block.text + .button {
+    text-align: center;
+    text-transform: uppercase;
+    width: 91.66667vw;
+    margin-left: 4.16667vw; }
+
+@media (min-width: 770px) {
+  .detailpage .header {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: var(--max-width);
+    height: auto; }
+    .detailpage .header:after {
+      content: '';
+      position: absolute;
+      width: 150vw;
+      height: 100%;
+      top: -25px;
+      left: -50vw;
+      z-index: -3;
+      background-color: #fafafa;
+      border: 1px solid #eaeaea; }
+    .detailpage .header .nav {
+      padding-bottom: 35px; }
+      .detailpage .header .nav .menu-item:not(:last-child) a {
+        color: #afafaf; }
+    .detailpage .header .logo {
+      display: block;
+      margin-top: -10px; }
+  .detailpage .heading .back {
+    position: absolute; }
+  .detailpage main .block.text + .button {
+    margin-left: 50%;
+    -webkit-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    transform: translate(-50%);
+    display: inline-block;
+    width: auto; } }
+
 .home .block.contactform {
   margin-top: 100px;
   margin-bottom: 100px;
@@ -877,6 +1019,8 @@ button::-moz-focus-inner {
     color: #242424;
     text-align: left;
     margin-bottom: 25px; }
+    .home .block.references .reference:after {
+      content: none; }
     .home .block.references .reference:nth-child(even) .introduction {
       -webkit-box-ordinal-group: 3;
       -webkit-order: 2;
@@ -919,7 +1063,12 @@ button::-moz-focus-inner {
       -webkit-flex: 0 0 -webkit-calc(var(--max-width) / 37 * 17);
       -moz-box-flex: 0;
       -ms-flex: 0 0 calc(var(--max-width) / 37 * 17);
-      flex: 0 0 calc(var(--max-width) / 37 * 17); } }
+      flex: 0 0 calc(var(--max-width) / 37 * 17); }
+      .home .block.references .reference .reference-image:not(.focuspoint) {
+        position: relative;
+        height: 420px;
+        width: 100%;
+        overflow: hidden; } }
 
 .page .block.references {
   margin-top: 100px;
@@ -956,15 +1105,20 @@ button::-moz-focus-inner {
     -webkit-justify-content: space-between;
     -moz-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between; }
+    justify-content: space-between;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-top: 25px; }
     .page .block.references .subtitle {
       position: absolute;
-      left: 0; }
+      left: 0;
+      top: -12.5px; }
     .page .block.references .reference-image {
       height: 100%;
       min-height: 350px; }
     .page .block.references .reference {
-      margin-top: 3rem;
+      margin-top: 25px;
       width: -webkit-calc(var(--max-width) / 37 * 17);
       width: calc(var(--max-width) / 37 * 17);
       margin-bottom: 0; }
@@ -1321,11 +1475,11 @@ button::-moz-focus-inner {
     height: -webkit-calc(100vh - 50px);
     height: calc(100vh - 50px); }
     .block.hero .image-wrapper .hero-image {
-      position: relative;
-      width: 100%;
+      position: static;
+      width: auto;
       height: -webkit-calc(100vh - 50px);
       height: calc(100vh - 50px);
-      display: block; }
+      width: 100vw; }
       .block.hero .image-wrapper .hero-image:after {
         content: '';
         position: absolute;
@@ -1335,13 +1489,6 @@ button::-moz-focus-inner {
         left: 0;
         z-index: 3;
         background-color: rgba(0, 0, 0, 0.5); }
-      .block.hero .image-wrapper .hero-image .img {
-        position: absolute;
-        -o-object-fit: cover;
-        object-fit: cover;
-        width: auto;
-        height: 100%;
-        display: block; }
 
 @media (min-width: 770px) {
   .block.hero {
@@ -1363,14 +1510,12 @@ button::-moz-focus-inner {
     .block.hero .button {
       max-width: -webkit-calc(var(--max-width) / 37 * 15);
       max-width: calc(var(--max-width) / 37 * 15); }
-    .block.hero .image-wrapper .hero-image .img {
-      position: absolute;
-      width: 100%;
-      display: block;
-      -webkit-transform: translateY(0);
-      -ms-transform: translateY(0);
-      -o-transform: translateY(0);
-      transform: translateY(0); } }
+    .block.hero .image-wrapper {
+      height: -webkit-calc(80vh - 50px);
+      height: calc(80vh - 50px); }
+      .block.hero .image-wrapper .hero-image {
+        height: -webkit-calc(80vh - 50px);
+        height: calc(80vh - 50px); } }
 
 .block.optredens {
   text-align: center; }
@@ -1410,7 +1555,17 @@ button::-moz-focus-inner {
   margin-bottom: 1rem;
   text-align: center;
   min-height: 250px;
-  color: white; }
+  color: white;
+  position: relative; }
+  .block.references .reference:after {
+    content: '';
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: .15; }
   .block.references .reference:last-child {
     margin-bottom: 0; }
   .block.references .reference .introduction {
@@ -1450,6 +1605,16 @@ button::-moz-focus-inner {
       position: absolute;
       bottom: 1rem;
       font-weight: 600; }
+  .block.references .reference .reference-image:not(.focuspoint) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 320px; }
+    .block.references .reference .reference-image:not(.focuspoint) .img {
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover; }
 
 main > .block {
   width: -webkit-calc(var(--max-width) / 24 * 22);
@@ -1499,7 +1664,8 @@ main > .block {
     z-index: -3;
     background-color: #fafafa;
     border: 1px solid #eaeaea; }
-  .block.testimonials .inner:before, .block.testimonials .inner:after {
+  .block.testimonials .inner:before,
+  .block.testimonials .inner .name:after {
     font-family: "OpenSans", sans-serif;
     font-size: 1rem;
     line-height: 1.5;
@@ -1512,7 +1678,7 @@ main > .block {
     color: #1abc9c;
     text-align: center;
     position: absolute;
-    font-size: 4.5rem;
+    font-size: 7rem;
     letter-spacing: 1rem;
     width: 30px;
     line-height: 0;
@@ -1524,10 +1690,6 @@ main > .block {
     left: -10px;
     top: 0;
     line-height: 3.5rem; }
-  .block.testimonials .inner:after {
-    content: "”";
-    bottom: 2rem;
-    right: -10px; }
   .block.testimonials .quote {
     font-family: "OpenSans", sans-serif;
     font-size: 1rem;
@@ -1539,13 +1701,25 @@ main > .block {
     margin: 1rem 0;
     font-weight: bold;
     font-size: 1.125rem;
-    text-align: right; }
+    text-align: right;
+    position: relative;
+    margin-right: 20px; }
+    .block.testimonials .name:after {
+      content: "”";
+      bottom: 0rem;
+      text-align: right;
+      right: 0; }
 
 @media (min-width: 770px) {
   .block.testimonials {
     margin-top: 0;
     width: -webkit-calc(var(--max-width) / 37 * 17);
-    width: calc(var(--max-width) / 37 * 17); } }
+    width: calc(var(--max-width) / 37 * 17); }
+    .block.testimonials .name:after {
+      bottom: -2rem; } }
+
+.block.text {
+  margin-bottom: 50px; }
 
 .block.usps .usp {
   margin-bottom: 50px;
@@ -1571,6 +1745,13 @@ main > .block {
     line-height: 2;
     font-style: italic;
     margin-bottom: 25px; }
+  .block.usps .usp .button {
+    text-transform: uppercase;
+    text-align: center;
+    width: -webkit-calc(var(--max-width) / 24 * 22);
+    width: calc(var(--max-width) / 24 * 22);
+    left: -webkit-calc(var(--max-width) / 24 * 1);
+    left: calc(var(--max-width) / 24 * 1); }
 
 @media (min-width: 770px) {
   .block.usps .usp {
@@ -1604,6 +1785,14 @@ main > .block {
       padding: calc(var(--max-width) / 37 * 1); }
       .block.usps .usp .article .subtitle {
         padding-top: 0; }
+    .block.usps .usp .button {
+      text-transform: uppercase;
+      width: -webkit-calc(var(--max-width) / 37 * 15);
+      width: calc(var(--max-width) / 37 * 15);
+      left: -webkit-calc(var(--max-width) / 37 * 1);
+      left: calc(var(--max-width) / 37 * 1);
+      bottom: -webkit-calc(var(--max-width) / 37 * 1);
+      bottom: calc(var(--max-width) / 37 * 1); }
     .block.usps .usp .picture {
       -webkit-box-flex: 0;
       -webkit-flex: 0 0 -webkit-calc(var(--max-width) / 37 * 17);
