--- a/app/_sass/elements/blocks/_block.text.scss
+++ b/app/_sass/elements/blocks/_block.text.scss
@@ -1,3 +1,11 @@
 .block.text {
+	margin: 0 auto;
 	margin-bottom: $gutter*2;
+}
+
+@include breakpoint($desktop) {
+	.block.text {
+		width: calc(var(--max-width) / 37 * 31);
+		// margin-left: calc(var(--max-width) / 37 * 1);
+	}
 }
