--- a/app/_sass/variables/_colors.scss
+++ b/app/_sass/variables/_colors.scss
@@ -1,4 +1,5 @@
 $primary: #1abc9c;
+$hover: #17a98c;
 $secundary: #242424;
 
 $white: white;
@@ -13,3 +14,4 @@ $box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
 $border-radius: 5px;
 $text-shadow:  0 1px 4px rgba(0, 0, 0, 0.5);
+$menu-toggle: $white;
