--- a/app/_sass/sections/_header.scss
+++ b/app/_sass/sections/_header.scss
@@ -1,6 +1,8 @@
 .header {
 	position: absolute;
-	width: 100%;
+	width: var(--max-width);
+	left: 50%;
+	transform: translate(-50%);
 	z-index: 5;
 
     .logo {
