--- a/app/assets/css/stylesheet.css
+++ b/app/assets/css/stylesheet.css
@@ -926,13 +926,15 @@ button::-moz-focus-inner {
 .detailpage .heading {
   position: relative; }
   .detailpage .heading .back {
-    color: #333333;
+    color: #242424;
     top: 37.5px;
     margin-left: 4.16667vw;
     position: absolute;
     margin-top: -125px;
+    font-weight: 400;
     z-index: 5; }
     .detailpage .heading .back svg {
+      fill: #242424;
       color: #333333;
       width: 10px; }
   .detailpage .heading .title {
@@ -977,14 +979,21 @@ button::-moz-focus-inner {
       padding-bottom: 35px; }
       .detailpage .header .nav .menu-item:not(:last-child) a {
         color: #afafaf; }
+        .detailpage .header .nav .menu-item:not(:last-child) a:after {
+          opacity: .7;
+          background-color: #afafaf; }
   .detailpage .heading .back {
+    color: #afafaf;
     position: absolute;
     margin-top: -12.5px;
-    opacity: .7;
     margin-left: -webkit-calc((100vw - var(--max-width))  / 2 + (var(--max-width) / 37 * 1));
     margin-left: calc((100vw - var(--max-width))  / 2 + (var(--max-width) / 37 * 1)); }
+    .detailpage .heading .back svg {
+      fill: #afafaf; }
     .detailpage .heading .back:hover {
-      opacity: 1; }
+      color: #242424; }
+      .detailpage .heading .back:hover svg {
+        fill: #242424; }
   .detailpage .heading .title {
     margin-top: 175px;
     position: relative; }
