--- a/app/_includes/_sections/head.html
+++ b/app/_includes/_sections/head.html
@@ -2,6 +2,7 @@
 	<title>{{ site.name }}</title> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
 	<meta name="HandheldFriendly" content="True">
 	<meta name="author" content="{{ site.author.name }}">
 	<meta name="description" content="{{ site.description }}">
