--- a/app/_layouts/detailpage.html
+++ b/app/_layouts/detailpage.html
@@ -11,7 +11,40 @@
 			<picture class="hero-image">
 				<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
 			</picture>
-			{{ content }}
+			
+			<section class="block text">
+				<p class="paragraph">{{ content }}</p>
+			</section>
+
+			{% if page.button %}
+				<a href="{{ page.externalUrl }}" target="blank" class="button">{{ page.button }}</a>
+			{% endif %}
+
+
+			{% include _blocks/video.html %}
+
+			{% include _blocks/contactform.html %}
+
+			<section class="block references"> 
+			<strong class="subtitle">Andere producties</strong>
+				{% assign sortedPages = site.pages | sort: 'order' %}
+				{% assign currentPage = page.path %}
+				{% for page in sortedPages %}{% if page.path contains '.md' %}
+				{% unless page.path contains currentPage %}
+				<article class="reference">
+					<div class="introduction">
+						<h3 class="title">{{page.title}}</h3>
+						<p class="keywords">Bijzonder, spannend, krachtig.</p>
+						<p class="description">{{page.teasertext}}</p>
+						<a href="{{page.url}}" class="button">Lees meer</a>
+					</div>
+					<picture class="focuspoint reference-image">
+						<img class="img" src="{{page.headerimage}}" alt="{{page.title}}">
+					</picture>
+				</article>
+				{% endunless %}{% endif %}{% endfor %}
+			</section>
+
 
 		</main>
 		{% include _sections/footer.html %}
