--- a/app/_layouts/detailpage.html
+++ b/app/_layouts/detailpage.html
@@ -8,7 +8,7 @@
 			<h1 class="title">{{ page.title }}</h1>
 		</div>
 		<main>	
-			<picture class="hero-image">
+			<picture class="picture">
 				<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
 			</picture>
 			
