--- a/app/assets/css/stylesheet.css
+++ b/app/assets/css/stylesheet.css
@@ -800,7 +800,16 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 400;
-  width: 100vw; }
+  width: 100vw;
+  height: auto;
+  height: 100vh;
+  overflow-x: hidden;
+  -webkit-perspective: 1px;
+  perspective: 1px;
+  -webkit-perspective-origin: center center;
+  perspective-origin: center center;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d; }
 
 .invisible,
 .none {
@@ -911,7 +920,7 @@ button::-moz-focus-inner {
     color: #242424;
     display: none; }
 
-.detailpage .hero-image {
+.detailpage .picture {
   display: block;
   width: -webkit-calc(var(--max-width) / 24 * 22);
   width: calc(var(--max-width) / 24 * 22);
@@ -919,9 +928,7 @@ button::-moz-focus-inner {
   max-width: calc( var(--max-width) - (var(--max-width) / 37 * 2));
   margin: 37.5px auto;
   z-index: -99;
-  position: relative;
-  max-height: 500px;
-  overflow: hidden; }
+  max-height: 500px; }
 
 .detailpage .heading {
   position: relative; }
@@ -1319,10 +1326,27 @@ button::-moz-focus-inner {
     .header .logo {
       font-size: 1.5rem; } }
 
-.main {
+main {
   max-width: var(--max-width);
   width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: block;
+  top: -500px;
+  position: static;
+  z-index: 1;
+  min-height: 200vh;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0); }
+  main:after {
+    height: 100%;
+    width: 200vw;
+    z-index: -4;
+    content: '';
+    left: -50vw;
+    top: -50px;
+    display: block;
+    position: absolute;
+    background: white; }
 
 .button {
   color: white;
@@ -1438,6 +1462,29 @@ button::-moz-focus-inner {
       font-weight: light;
       font-size: 2.5rem; } }
 
+.hero-image {
+  display: block;
+  height: -webkit-calc(100vh + 100px);
+  height: calc(100vh + 100px);
+  margin-top: -100px;
+  width: 100vw;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -5;
+  -webkit-transform: translateZ(-1px) scale(2);
+  transform: translateZ(-1px) scale(2); }
+  .hero-image:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.5); }
+
 .block.hero {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1463,7 +1510,7 @@ button::-moz-focus-inner {
   -moz-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
   position: relative;
   width: 100vw;
   overflow: hidden; }
@@ -1503,29 +1550,6 @@ button::-moz-focus-inner {
       width: 100%; }
       .block.hero .introduction .button:hover {
         background-color: #17a98c; }
-  .block.hero .image-wrapper {
-    width: 100vw;
-    overflow: hidden;
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    height: -webkit-calc(100vh - 50px);
-    height: calc(100vh - 50px); }
-    .block.hero .image-wrapper .hero-image {
-      position: static;
-      width: auto;
-      height: -webkit-calc(100vh - 50px);
-      height: calc(100vh - 50px);
-      width: 100vw; }
-      .block.hero .image-wrapper .hero-image:after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: 3;
-        background-color: rgba(0, 0, 0, 0.5); }
 
 @media (min-width: 770px) {
   .block.hero {
@@ -1534,8 +1558,8 @@ button::-moz-focus-inner {
     -moz-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    height: -webkit-calc(80vh - 50px);
-    height: calc(80vh - 50px);
+    height: -webkit-calc(90vh);
+    height: calc(90vh);
     padding: 0; }
     .block.hero .title {
       font-size: 3em !important; }
@@ -1546,13 +1570,7 @@ button::-moz-focus-inner {
       margin-bottom: 1rem; }
     .block.hero .button {
       max-width: -webkit-calc(var(--max-width) / 37 * 15);
-      max-width: calc(var(--max-width) / 37 * 15); }
-    .block.hero .image-wrapper {
-      height: -webkit-calc(80vh - 50px);
-      height: calc(80vh - 50px); }
-      .block.hero .image-wrapper .hero-image {
-        height: -webkit-calc(80vh - 50px);
-        height: calc(80vh - 50px); } }
+      max-width: calc(var(--max-width) / 37 * 15); } }
 
 .block.optredens {
   text-align: center; }
