up before changing smooth scrolling issue

--- a/app/_includes/_blocks/header.html
+++ b/app/_includes/_blocks/header.html
@@ -3,7 +3,7 @@
 		<div class="menu-toggle"></div>
 		<a href="/"><h1 class="logo">Jelle Kuiper</h1></a>
 		<ul class="nav">
-			<li class="menu-item {% if page.path contains 'index' %}active{% endif %}"><a href="/" class="menu-link">Home</a></li>
+			<li class="menu-item {% if page.layout contains 'front' %}active{% endif %}"><a href="/" class="menu-link">Home</a></li>
 			<li class="menu-item {% if page.path contains 'trouwambtenaar' %}active{% endif %}"><a href="/trouwambtenaar" class="menu-link">Trouwambtenaar</a></li>
 			<li class="menu-item {% if page.path contains 'bedrijfsoptredens' %}active{% endif %}"><a href="/bedrijfsoptredens"  class="menu-link">Bedrijfsoptredens</a></li>
 			<li class="menu-item {% if page.path contains 'theaterproducties' %}active{% endif %}"><a href="/theaterproducties" class="menu-link">Theaterproducties</a></li>
