--- a/app/_sass/elements/menu/_main-menu.scss
+++ b/app/_sass/elements/menu/_main-menu.scss
@@ -33,8 +33,8 @@
 					width: 0;
 					background-color: $primary;
 					height: 6px;
-					left: 15px;
-					bottom: 3px;
+					left: 0;
+					bottom: -5px;
 					z-index: -1;
 					opacity: 1;
 					position: absolute;
