--- a/app/assets/css/stylesheet.css
+++ b/app/assets/css/stylesheet.css
@@ -2194,8 +2194,8 @@ main > .block {
           width: 0;
           background-color: #1abc9c;
           height: 6px;
-          left: 15px;
-          bottom: 3px;
+          left: 0;
+          bottom: -5px;
           z-index: -1;
           opacity: 1;
           position: absolute; }
@@ -2359,6 +2359,8 @@ main > .block {
         font-weight: 600;
         padding: 5px;
         opacity: .2; }
+      .owl-carousel .owl-dots .owl-dot:hover:before {
+        opacity: .5; }
       .owl-carousel .owl-dots .owl-dot span {
         display: none; }
       .owl-carousel .owl-dots .owl-dot.active:before {
@@ -2369,6 +2371,9 @@ main > .block {
     position: absolute;
     bottom: -25px;
     width: 30px; }
+    .owl-carousel .owl-prev:hover,
+    .owl-carousel .owl-next:hover {
+      fill: #17a98c; }
     .owl-carousel .owl-prev:focus, .owl-carousel .owl-prev:hover,
     .owl-carousel .owl-next:focus,
     .owl-carousel .owl-next:hover {
